# layered-config-py

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/layered_config/: __init__.py  attribute_accessor.py  layered_config.py
tests/: test_attribute_accessor.py  test_layered_config.py
